# reactos

./: .gitattributes  CMakeLists.txt  appveyor.yml  configure.cmd  toolchain-gcc.cmake  toolchain-msvc.cmake
.github/workflows/: build.yml
base/applications/: CMakeLists.txt
base/services/: CMakeLists.txt
base/services/nfsd/: CMakeLists.txt  recovery.c
boot/: CMakeLists.txt
boot/bootdata/: bootcd.ini  hivesys.inf  livecd.inf  livecd.ini  txtsetup.sif
boot/freeldr/: CMakeLists.txt
dll/: CMakeLists.txt
dll/apisets/: api-ms-win-crt-utility-l1-1-0.spec  update.py
dll/appcompat/apphelp/: CMakeLists.txt
dll/cpl/desk/: CMakeLists.txt  desk.h  general.c  muireg.c
dll/directx/d3d9/: adapter.c  d3d9_caps.c  d3d9_create.c  d3d9_cursor.c  d3d9_device.c  d3d9_impl.c  d3d9_mipmap.c  d3d9_swapchain.c  device.c
dll/directx/wine/d3dcompiler_43/: CMakeLists.txt
dll/directx/wine/wined3d/: CMakeLists.txt
dll/keyboard/: CMakeLists.txt
dll/ntdll/: CMakeLists.txt
dll/ntdll/csr/: connect.c
dll/ntdll/dbg/: dbgui.c
dll/ntdll/def/: ntdll.spec
dll/ntdll/ldr/: ldrinit.c  ldrutils.c
dll/shellext/shellbtrfs/: CMakeLists.txt
dll/win32/: CMakeLists.txt
dll/win32/advapi32/service/: sctrl.c
dll/win32/atl/: atl30.c
dll/win32/browseui/: desktopipc.cpp
dll/win32/dbghelp/: CMakeLists.txt
dll/win32/fltlib/: CMakeLists.txt
dll/win32/jscript/: CMakeLists.txt
dll/win32/kernel32/client/: proc.c  thread.c  time.c
dll/win32/kernel32/kernel32_vista/: vista.c
dll/win32/kernel32/winnls/: locale_rc.rc
dll/win32/kernel32/winnls/nls/: eox.nls
dll/win32/kernel32/winnls/string/: locale.c  nls.c
dll/win32/lsasrv/: dssetup.c  registry.c
dll/win32/mmdrv/: auxil.c  midi.c  utils.c
dll/win32/msafd/misc/: event.c  sndrcv.c
dll/win32/msgina/: gui.c
dll/win32/mshtml/: nsio.c
dll/win32/msi/: CMakeLists.txt  custom.c  msipriv.h
dll/win32/msrle32/: msrle32.c
dll/win32/msxml/: CMakeLists.txt
dll/win32/msxml2/: CMakeLists.txt
dll/win32/msxml3/: CMakeLists.txt
dll/win32/msxml4/: CMakeLists.txt
dll/win32/msxml6/: CMakeLists.txt
dll/win32/netapi32/: dssetup.c
dll/win32/rasadhlp/: precomp.h
dll/win32/riched20/: run.c
dll/win32/secur32/: CMakeLists.txt
dll/win32/shell32/wine/: shellpath.c
dll/win32/shimgvw/: shimgvw.c
dll/win32/syssetup/: wizard.c
dll/win32/userenv/: environment.c  profile.c
dll/win32/vbscript/: CMakeLists.txt
dll/win32/wbemprox/: CMakeLists.txt  builtin.c
dll/win32/windowscodecs/: CMakeLists.txt
dll/win32/wininet/: http.c
dll/win32/winmm/: mci.c
dll/win32/winmm/midimap/: CMakeLists.txt
dll/win32/wintrust/: wintrust_main.c
dll/win32/ws2help/: precomp.h
drivers/: CMakeLists.txt
drivers/base/: CMakeLists.txt
drivers/base/bootvid/arm/: arm.h
drivers/class/: CMakeLists.txt
drivers/filesystems/: CMakeLists.txt
drivers/usb/usbhub/: CMakeLists.txt
hal/halx86/: CMakeLists.txt  acpi.cmake  generic.cmake
media/doc/: 3rd Party Files.txt
modules/rostests/: CMakeLists.txt
modules/rostests/apitests/: CMakeLists.txt
modules/rostests/apitests/apphelp/: db.cpp  env.c
modules/rostests/apitests/browseui/: SHExplorerParseCmdLine.c
modules/rostests/apitests/compiler/ms/: CMakeLists.txt
modules/rostests/apitests/loadconfig/: CMakeLists.txt
modules/rostests/apitests/netapi32/: DsRoleGetPrimaryDomainInformation.c
modules/rostests/apitests/ntdll/: NtAllocateVirtualMemory.c  NtApphelpCacheControl.c  NtQueryInformationProcess.c  RtlBitmap.c  RtlValidateUnicodeString.c
modules/rostests/apitests/user32_dynamic/: load.c
modules/rostests/apitests/ws2_32/: WSAAsync.c  WSAIoctl.c  bind.c  gethostname.c
modules/rostests/kmtests/: CMakeLists.txt
modules/rostests/kmtests/include/: kmt_test.h  kmt_test_kernel.h
modules/rostests/kmtests/kmtest/: support.c  testlist.c
modules/rostests/kmtests/kmtest_drv/: kmtest_fsminifilter.c
modules/rostests/kmtests/ntos_cc/: CcCopyRead_drv.c  CcCopyWrite_drv.c
modules/rostests/kmtests/ntos_ex/: ExUuid.c
modules/rostests/kmtests/ntos_io/: IoMdl.c  IoReadWrite_drv.c
modules/rostests/kmtests/ntos_mm/: NtCreateSection_drv.c  NtCreateSection_user.c  ZwAllocateVirtualMemory.c  ZwMapViewOfSection.c
modules/rostests/kmtests/ntos_ob/: ObTypes.c
modules/rostests/kmtests/tcpip/: TcpIp_user.c
modules/rostests/unittests/interop/: LocaleTests.cpp
modules/rostests/winetests/: CMakeLists.txt
modules/rostests/winetests/comctl32/: tab.c
modules/rostests/winetests/gdiplus/: CMakeLists.txt
modules/rostests/winetests/kernel32/: CMakeLists.txt  generated.c
modules/rostests/winetests/mshtml/: activex.c
modules/rostests/winetests/msvcrt/: CMakeLists.txt
modules/rostests/winetests/netapi32/: ds.c
modules/rostests/winetests/ntdll/: info.c
modules/rostests/winetests/user32/: CMakeLists.txt
modules/rostests/winetests/windowscodecs/: tiffformat.c
modules/rostests/winetests/winhttp/: winhttp.c
modules/rostests/winetests/wininet/: http.c
ntoskrnl/: CMakeLists.txt  ntos.cmake
ntoskrnl/cc/: copy.c  view.c
ntoskrnl/ex/: exintrin.c  handle.c  init.c  uuid.c
ntoskrnl/fsrtl/: fastio.c
ntoskrnl/inbv/: bootanim.rc
ntoskrnl/include/: config.h  ntoskrnl.h  resource.h
ntoskrnl/kd/: kdio.c
ntoskrnl/kdbg/: kdb.c  kdb_cli.c
ntoskrnl/mm/: mminit.c  section.c
ntoskrnl/ntkrnlmp/: CMakeLists.txt
ntoskrnl/ob/: obref.c
ntoskrnl/po/: poshtdwn.c
ntoskrnl/ps/: apphelp.c  query.c
ntoskrnl/se/: srm.c
sdk/cmake/: CMakeMacros.cmake  baseaddress.cmake  baseaddress64.cmake  baseaddress_dwarf.cmake  baseaddress_msvc.cmake  config.cmake  (+4 more)
sdk/lib/drivers/: CMakeLists.txt
sdk/lib/drivers/rdbsslib/: rdbss.c
sdk/lib/drivers/sound/legacy/: devname.c  hardware.c
sdk/lib/drivers/sound/mmixer/: controls.c
subsystems/mvdm/: CMakeLists.txt  asm16.cmake
subsystems/mvdm/ntvdm/: CMakeLists.txt
subsystems/mvdm/ntvdm/bios/bios32/: bios32.c  vbe.c
win32ss/: CMakeLists.txt  pch.h
win32ss/drivers/: CMakeLists.txt
win32ss/drivers/displays/vga/main/: enable.c
win32ss/drivers/miniport/: CMakeLists.txt
wine/: .gitattributes  config.pm  tests.pm  winapi_extract  winapi_test
(+298 files in other folders)
